modules/wycs/tests/valid/test_054.wycs
assert:
  forall ({int} xs, {int} ys, {int} zs):
       (xs ⊆ ys && ys ⊆ zs) ==> xs ⊆ zs
