modules/wycs/tests/invalid/test_066.wycs
assert:
  forall({int} xs, {int} ys): 
    xs ⊆ ys ==> xs == ys